[gd_scene load_steps=19 format=3 uid="uid://bkqhw6tmfcmkf"]

[ext_resource type="Script" path="res://src/ui/main_menu.gd" id="1_0s6np"]
[ext_resource type="PackedScene" uid="uid://vjw5tneuoupl" path="res://scenes/world1.tscn" id="2_00wlt"]
[ext_resource type="PackedScene" uid="uid://bh3n2t2wlanhj" path="res://scenes/buildings/building_1.tscn" id="3_jk7dn"]
[ext_resource type="FontFile" uid="uid://dnlsfa30ph5gm" path="res://data/fonts/wortlaut_ah/wortl-b.ttf" id="3_nmgxb"]
[ext_resource type="PackedScene" uid="uid://ignpdv10rx52" path="res://addons/boujie_water_shader/prefabs/deep_ocean.tscn" id="4_3cb5e"]
[ext_resource type="FontFile" uid="uid://c3gqt5en13mb6" path="res://data/fonts/amelies_zettelwirtschaft_ah/Amelies.ttf" id="4_65tgl"]
[ext_resource type="PackedScene" uid="uid://d3rgjer43yod0" path="res://scenes/buildings/building_3.tscn" id="5_h2c6a"]
[ext_resource type="PackedScene" uid="uid://cc5yhdn2tydqa" path="res://scenes/buildings/building_4.tscn" id="6_if7ff"]
[ext_resource type="PackedScene" uid="uid://dtv05mh2j06ay" path="res://scenes/bonfire.tscn" id="7_2ns5c"]
[ext_resource type="PackedScene" uid="uid://dy3emobp2hnq6" path="res://scenes/buildings/building_2.tscn" id="7_jkh4b"]
[ext_resource type="PackedScene" uid="uid://cxk6r2jldfakj" path="res://scenes/rat.tscn" id="8_ao3hc"]
[ext_resource type="PackedScene" uid="uid://d0vfj71fheeah" path="res://scenes/sign/sign.tscn" id="9_0sq3w"]
[ext_resource type="ArrayMesh" uid="uid://bgjtl5gqy2a5b" path="res://data/models/buildings/building_3.obj" id="11_txj21"]
[ext_resource type="ArrayMesh" uid="uid://dlgu81spgpsrl" path="res://data/models/buildings/vegetation/building_3_veg.obj" id="12_fl34u"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_livy2"]

[sub_resource type="Sky" id="Sky_3pr55"]
sky_material = SubResource("ProceduralSkyMaterial_livy2")

[sub_resource type="Environment" id="Environment_8d7l5"]
background_mode = 2
sky = SubResource("Sky_3pr55")
ssr_enabled = true
ssao_enabled = true

[sub_resource type="SphereShape3D" id="SphereShape3D_5rhsp"]
radius = 7.50528

[node name="MainMenu" type="Node"]
script = ExtResource("1_0s6np")
game_scene = ExtResource("2_00wlt")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_nmgxb")
theme_override_font_sizes/font_size = 64
text = "Pablo o Pombo"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_nmgxb")
theme_override_font_sizes/font_size = 32
text = "serviço de entrega pós apocalíptico"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(300, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="PlayButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_65tgl")
text = "Jogar"

[node name="QuitButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_65tgl")
text = "Sair"

[node name="Environment" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.77771, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.91811, -0.372514, 0.135304, 0.285608, 0.858569, 0.425779, -0.274776, -0.352269, 0.894653, 0, 123.996, 0)
shadow_enabled = true
shadow_blur = 2.687

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_8d7l5")

[node name="Camera3D" type="Camera3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 0.996195, 0.0871557, 0, -0.0871557, 0.996195, 0, 31.863, 40.953)
fov = 60.0

[node name="RatCompound" type="Node3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.88728, 17.673, -2.51576)

[node name="bonfire" parent="Environment/RatCompound" instance=ExtResource("7_2ns5c")]

[node name="rat" parent="Environment/RatCompound/bonfire/Armature/Skeleton3D" index="0"]
transform = Transform3D(0.0663293, 0.000870834, 1.16987e-10, -0.000870834, 0.0663293, -7.66054e-13, -1.16987e-10, -7.69607e-13, 0.0663351, 0.144997, 1.35341, 1.74756e-07)

[node name="rats" type="Node3D" parent="Environment/RatCompound"]

[node name="rat8" parent="Environment/RatCompound/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(0.794315, 0, 0, 0, 0.794315, 0, 0, 0, 0.794315, -0.0202734, 0, -3.58538)

[node name="rat9" parent="Environment/RatCompound/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(-0.831753, 0, 0.616222, 0, 1.35265, 0, -0.757766, 0, -0.676389, -2.47154, -0.0330462, 2.91279)

[node name="rat10" parent="Environment/RatCompound/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(0.850655, 0, 1.54836, 0, 1.76664, 0, -1.54836, 0, 0.850655, -3.97834, -4.76837e-07, -2.16378)

[node name="rat11" parent="Environment/RatCompound/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(1.0416, -0.00208662, 0.0230068, 0.00227208, 0.991986, -0.00207436, -0.0302492, 0.00265858, 0.79206, 3.19104, 0, 0.0777304)

[node name="rat12" parent="Environment/RatCompound/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(0.142367, 0, -0.410297, 0, 0.434295, 0, 0.410297, 0, 0.142367, 4.25547, -0.102181, -0.288109)

[node name="rat13" parent="Environment/RatCompound/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(-0.110216, 0, -0.360139, 0, 0.376627, 0, 0.360139, 0, -0.110216, 4.47114, 0, 0.6907)

[node name="rat14" parent="Environment/RatCompound/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(-0.713116, 0, -0.701046, 0, 1, 0, 0.701046, 0, -0.713116, 2.66905, 0, 3.19786)

[node name="rat15" parent="Environment/RatCompound/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(-0.725605, 0, 0.354174, 0, 0.820932, 0, -0.383961, 0, -0.669313, -1.55175, -0.0330462, 3.8099)

[node name="rat16" parent="Environment/RatCompound/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(0.960944, 0, -0.276744, 0, 1, 0, 0.276744, 0, 0.960944, 1.59147, -4.76837e-07, -3.71969)

[node name="Area3D" type="Area3D" parent="Environment/RatCompound"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/RatCompound/Area3D"]
shape = SubResource("SphereShape3D_5rhsp")

[node name="Sign" parent="Environment/RatCompound" instance=ExtResource("9_0sq3w")]
transform = Transform3D(-0.305961, 0, -0.952044, 0, 1, 0, 0.952044, 0, -0.305961, -2.61864, 0.193083, -1.27843)
text = "esse é o menu do jogo kkkkk
"

[node name="RatCompound2" type="Node3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 0.972715, -0.232003, 0, 0.232003, 0.972715, -125.73, 36.3641, -137.703)

[node name="bonfire" parent="Environment/RatCompound2" instance=ExtResource("7_2ns5c")]

[node name="rat" parent="Environment/RatCompound2/bonfire/Armature/Skeleton3D" index="0"]
transform = Transform3D(0.0663293, 0.000870834, 1.16987e-10, -0.000870834, 0.0663293, -7.66054e-13, -1.16987e-10, -7.69607e-13, 0.0663351, 0.144997, 1.35341, 1.74756e-07)

[node name="rats" type="Node3D" parent="Environment/RatCompound2"]

[node name="rat8" parent="Environment/RatCompound2/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(0.794315, 0, 0, 0, 0.794315, 0, 0, 0, 0.794315, -0.0202734, 0, -3.58538)

[node name="rat9" parent="Environment/RatCompound2/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(-0.831753, 0, 0.616222, 0, 1.35265, 0, -0.757766, 0, -0.676389, -2.47154, -0.0330462, 2.91279)

[node name="rat10" parent="Environment/RatCompound2/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(0.850655, 0, 1.54836, 0, 1.76664, 0, -1.54836, 0, 0.850655, -3.97834, -4.76837e-07, -2.16378)

[node name="rat11" parent="Environment/RatCompound2/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(1.0416, -0.00208662, 0.0230068, 0.00227208, 0.991986, -0.00207436, -0.0302492, 0.00265858, 0.79206, 3.19104, 0, 0.0777304)

[node name="rat12" parent="Environment/RatCompound2/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(0.142367, 0, -0.410297, 0, 0.434295, 0, 0.410297, 0, 0.142367, 4.25547, -0.102181, -0.288109)

[node name="rat13" parent="Environment/RatCompound2/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(-0.110216, 0, -0.360139, 0, 0.376627, 0, 0.360139, 0, -0.110216, 4.47114, 0, 0.6907)

[node name="rat14" parent="Environment/RatCompound2/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(-0.713116, 0, -0.701046, 0, 1, 0, 0.701046, 0, -0.713116, 2.66905, 0, 3.19786)

[node name="rat15" parent="Environment/RatCompound2/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(-0.725605, 0, 0.354174, 0, 0.820932, 0, -0.383961, 0, -0.669313, -1.55175, -0.0330462, 3.8099)

[node name="rat16" parent="Environment/RatCompound2/rats" instance=ExtResource("8_ao3hc")]
transform = Transform3D(0.960944, 0, -0.276744, 0, 1, 0, 0.276744, 0, 0.960944, 1.59147, -4.76837e-07, -3.71969)

[node name="Area3D" type="Area3D" parent="Environment/RatCompound2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/RatCompound2/Area3D"]
shape = SubResource("SphereShape3D_5rhsp")

[node name="Sign" parent="Environment/RatCompound2" instance=ExtResource("9_0sq3w")]
transform = Transform3D(-0.305961, 0, -0.952044, 0, 1, 0, 0.952044, 0, -0.305961, -2.61864, 0.193083, -1.27843)

[node name="Building1" parent="Environment" instance=ExtResource("3_jk7dn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.1941, -62.3264, -1.22319)

[node name="DeepOcean" parent="Environment" instance=ExtResource("4_3cb5e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -39.461, -3.1539, 128.304)

[node name="Building3" parent="Environment" instance=ExtResource("5_h2c6a")]
transform = Transform3D(-0.317321, 0, -0.948318, -0.195175, 0.978592, 0.0653083, 0.928016, 0.205811, -0.310528, -125.73, -12.6714, -147.487)
building_mesh = ExtResource("11_txj21")
vegetation_mesh = ExtResource("12_fl34u")

[node name="Building4" parent="Environment" instance=ExtResource("6_if7ff")]
transform = Transform3D(0.959977, 0, -0.28008, 0, 1, 0, 0.28008, 0, 0.959977, -21.43, -26.681, -528.98)

[node name="Building2" parent="Environment" instance=ExtResource("7_jkh4b")]
transform = Transform3D(0.859683, 0, 0.510828, 0, 1, 0, -0.510828, 0, 0.859683, -113.696, -52.608, -275.901)

[node name="Building5" parent="Environment" instance=ExtResource("7_jkh4b")]
transform = Transform3D(0.850168, 0, -0.526511, 0, 1, 0, 0.526511, 0, 0.850168, 127.803, -52.608, -297.325)

[node name="Building6" parent="Environment" instance=ExtResource("7_jkh4b")]
transform = Transform3D(0.845469, -0.0895965, -0.526454, 0.0783844, 0.995968, -0.0436194, 0.52824, -0.00438697, 0.849084, 192.753, -52.608, -222.63)

[connection signal="button_down" from="Control/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="Control/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_button_down"]
[connection signal="body_entered" from="Environment/RatCompound/Area3D" to="Environment/RatCompound" method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="Environment/RatCompound2/Area3D" to="Environment/RatCompound2" method="_on_area_3d_body_entered"]

[editable path="Environment/RatCompound/bonfire"]
[editable path="Environment/RatCompound/Sign"]
[editable path="Environment/RatCompound2/bonfire"]
[editable path="Environment/RatCompound2/Sign"]
